			CHANGELOG for KAME kit

$KAME: CHANGELOG,v 1.1697 2001/05/30 18:23:30 itojun Exp $

<200105>
2001-05-31  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c (explore_numeric): when a
	numeric address is given to getaddrinfo() with the AI_CANONNAME
	flag, set the name itself to each ai_canonname field of the
	returned addrinfo chain.
	Without the change, getaddrinfo would leave the field NULL, which
	would annoy some applications.
	(the change follows 2553bis-03)

2001-05-29  Shin'ichi Fujisawa  <fujisawa@kame.net>
	* kame/sys/netinet6/natpt_trans.c
	- Translate LPSV to PASV.
	- Translate PASV result(*1) to LPSV result(*2).
	    *1: 227 Entering Passive Mode (...)
	    *2: 228 Entering Long Passive Mode (...)
	  Todo: LPRT -> PORT, PORT result -> LPRT result.

2001-05-29  Shin'ichi Fujisawa  <fujisawa@kame.net>
	* kame/sys/netinet6/natpt_{defs.h,trans.c,tslot.c,var.h}
	- convert FTP EPRT command to PORT.
	  Now, you can connect IPv6 host to IPv4 ftp server when passive
	  mode is off.
	  Todo: LPSV/LPRT

Mon May 28 00:24:45 JST 2001  itojun@iijlab.net
	* sys/netinet6/raw_ip6.c: declare struct rip6stat.  gather statistics
	  on SOCK_RAW sockets (except for icmp6 sockets) for debugging aid.
	  req'ed by yasu.
	  TODO: netstat(1) support for bsdi4

Sat May 26 23:40:50 JST 2001 sakane@ydc.co.jp
	* freebsd4/sys/netinet6/raw_ip6.c:
	Fixed IPV6_USE_MIN_MTU behavior in rip6_output().

Thu May 24 18:18:24 JST 2001 sakane@ydc.co.jp
	* kame/racoon:
	Enabled passive mode.  Racoon never initiate IKE session
	if passive mode is defined in the configuration file.

Thu May 24 17:59:51 JST 2001 sakane@ydc.co.jp
	* sys/netkey/key.c:
	Fixed to get a SA to be used when of SADB_ADD, SADB_UPDATE
	and SADB_GETSPI. In the case of add, update and getspi, "reqid"
	must to be take care when of looking for a SA.

Thu May 24 17:21:05 JST 2001  itojun@iijlab.net
	* sys/netinet6/in6_rmx.c (freebsd[34]): do not configure tcp